syntax = "proto3";
option go_package = "gofr.dev/examples/grpc/grpc-streaming-client/client";

message Request {
  string message = 1;
}

message Response {
  string message = 1;
}

service ChatService {
  rpc ServerStream(Request) returns (stream Response);
  rpc ClientStream(stream Request) returns (Response);
  rpc BiDiStream(stream Request) returns (stream Response);
}
